# pkg/util/awsutil/models/credentials.go
@@ -1,0 +1,7 @@
+package awsmodels
+
+type Credentials struct {
+	Region          string
+	AccessKeyId     string
+	SecertAccessKey string
+}
